<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Карта доступности</string>
    <string name="title_activity_activity_main">@string/app_name</string>
    <string name="category">Категория</string>
    <string name="availability">Доступность</string>
    <string name="refresh_data">Обновить данные</string>
    <string name="about">О приложении</string>
    <string name="choose_at_least_one_category">Выберите хотя бы одну категорию</string>
    <string name="choose_at_least_one_accessibility">Выберите хотя бы один тип доступности</string>
    <string name="refreshing">Обновление данных&#8230;</string>
    <string name="about_dialog_title">@string/app_name</string>
    <string name="about_dialog_body">Разработчики: Александр Трошков, Ольга Дмитриева.\n\nПриложение является частью гранта KA432 Karelia ENPI CBC Programme, который финансируется Европейским Союзом, Российской Федерацией и Финляндией</string>
    <string name="about_dialog_button">ОК</string>
    <string name="telephone">Телефон:&#160;</string>
    <string name="drawer_help">Справка</string>
    <string name="help_text">Перед использованием приложения необходимо загрузить данные. Если этого не было сделано во время первого запуска, это можно сделать,
    нажав на кнопку «Обновить данные» на левой панели. Рекомендуется периодически загружать обновления. В случае обновления, предыдущие данные удаляются.\n\nЛевая панель вызывается
    по нажатию иконки приложения в верхнем заголовке. Панель позволяет выбирать категорию точек для отображения на карте, а также фильтровать точки
        выбраной категории.\nДля выбора категории или для фильтрации, нажмите и отпустите соответствующую
    кнопку.\n\nСоответствие иконок левой панели категориям инвалидности: передвигающиеся на креслах-колясках, с нарушениями зрения,
        с нарушениями опорно-двигательного аппарата, с нарушениями слуха, с нарушениями умственного развития.\n\nВарианты фильтрации: зеленый - полная доступность,
        желтый - частичная доступность, красный - недоступность, серый - нет данных.</string>
    <string name="search">Поиск</string>
    <string name="search_hint">Поиск объектов</string>
    <string name="object_on_map">Показать на карте</string>
    <string name="downloading_cancelled">Загрузка отменена</string>
    <string name="downloading_complete">Загрузка завершена успешно</string>
    <string name="parsing">Обновление данных</string>
    <string name="web_site">Веб-сайт:&#160;</string>
    <string name="how_to_get">Как добраться:&#160;</string>
    <string name="all_scopes">Все сферы деятельности</string>
    <string name="cannot_obtain_location_data">Невозможно получить данные о местоположении</string>

</resources>
