<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <fragment
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/map"
                tools:context=".ActivityMain"
                android:name="com.google.android.gms.maps.SupportMapFragment"/>

        <ProgressBar
                android:id="@+id/map_progerssbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:padding="5dp"
                android:visibility="gone"/>


    </RelativeLayout>


    <!-- The navigation drawer -->

    <ScrollView
            android:id="@+id/left_drawer"
            android:layout_width="270dp"
            android:layout_gravity="start"
            android:layout_height="match_parent"
            android:background="@color/light_gray">


        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#fff">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="@color/light_gray"
                    android:padding="10dp">


                <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                    <EditText
                            android:id="@+id/drawer_search_edittext"
                            android:hint="@string/search"
                            android:inputType="textCapSentences"
                            android:lines="1"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:maxLength="25"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    <ImageView
                            android:id="@+id/drawer_search_clear"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_content_remove"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:padding="3dp"/>

                </RelativeLayout>


                <ImageButton
                        android:id="@+id/drawer_search_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_action_search"
                        android:background="@color/transparent"/>

            </LinearLayout>

            <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"/>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <!--<TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search"
                        android:textAllCaps="true"/>-->


                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category"
                        android:textAllCaps="true"/>

                <RadioGroup
                        android:id="@+id/drawer_disability_layout"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                    <RadioButton
                            android:id="@+id/drawer_disability_wheelchair"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:button="@drawable/ic_disability_list_wheelchair"
                            android:checked="true"
                            android:onClick="onDisabilityChecked"/>

                    <RadioButton
                            android:id="@+id/drawer_disability_blind"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:button="@drawable/ic_disability_list_blind"
                            android:onClick="onDisabilityChecked"/>
                    <RadioButton
                            android:id="@+id/drawer_disability_muscular"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:button="@drawable/ic_disability_list_muscular"
                            android:onClick="onDisabilityChecked"/>
                    <RadioButton
                            android:id="@+id/drawer_disability_deaf"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:button="@drawable/ic_disability_list_deaf"
                            android:onClick="onDisabilityChecked"/>
                    <RadioButton
                            android:id="@+id/drawer_disability_mental"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:button="@drawable/ic_disability_list_mental"
                            android:onClick="onDisabilityChecked"/>

                </RadioGroup>

                <TextView
                        android:layout_marginTop="18dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/availability"
                        android:textAllCaps="true"/>

                <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                    <CheckBox
                            android:id="@+id/drawer_availability_full"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@drawable/ic_availability_full"
                            android:checked="true"
                            style="@style/availability_item"
                            android:onClick="onDisabilityChecked"/>

                    <CheckBox
                            android:id="@+id/drawer_availability_middle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@drawable/ic_availability_middle"
                            android:checked="true"
                            style="@style/availability_item"
                            android:onClick="onDisabilityChecked"/>

                    <CheckBox
                            android:id="@+id/drawer_availability_none"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@drawable/ic_availability_none"
                            style="@style/availability_item"
                            android:checked="true"
                            android:onClick="onDisabilityChecked"/>

                    <CheckBox
                            android:id="@+id/drawer_availability_unknown"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@drawable/ic_availability_unknown"
                            android:checked="true"
                            style="@style/availability_item"
                            android:onClick="onDisabilityChecked"/>

                </LinearLayout>


                <Spinner
                        android:id="@+id/drawer_spinner_scope"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"/>


            </LinearLayout>

            <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"/>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@color/light_gray"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/refresh_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/refresh_data"
                        style="@style/drawer_textview"/>

                <TextView
                        android:id="@+id/drawer_help"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/drawer_help"
                        style="@style/drawer_textview"/>

                <TextView
                        android:id="@+id/drawer_about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about"
                        style="@style/drawer_textview"/>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</android.support.v4.widget.DrawerLayout>

